# sask-calendar

./: .editorconfig  .gitignore  .pymarkdown  CLAUDE.md  README.md  flake.nix  pyproject.toml  wsgi.py
config/: calendars.toml  cofullness_data.toml  comet_data.toml  comet_template.toml  ephemeris_data.toml  house_data.toml  house_template.toml  lore_time.toml  lunar_calendar_data.toml  lunar_calendar_template.toml  seasons.toml  sky_style_data.toml  sky_style_template.toml  spark_data.toml  star_data.toml  star_template.toml  time_constants.toml  timeline.toml
design/decisions/: _schema.toml  dd-0005-stars-and-houses.toml  dd-0006-apparitions.toml  dd-0007-lunar-calendars.toml  dd-0008-sky-view.toml  dd-0009-ephemeris.toml  dd-001-scaffolding.toml  dd-0011-festival-months.toml  dd-0019-retire-nixos.toml  dd-002-calendar-engine.toml  dd-003-ux-and-service.toml
design/reqs/: _schema.toml  req-fun-001.toml  req-fun-002.toml  req-fun-003.toml  (+20 more)
docs/: deploy-runbook.md  dev-setup.md  devlog.md  glossary.md  references.md  user_testing.md  vm-setup.md
infra/: configuration.nix
secrets/: README.md
tests/: test_make_tree.py  test_spec_002.py  test_spec_003.py  test_spec_004.py  test_spec_005.py  test_spec_007.py  test_spec_008.py  test_spec_009.py  test_spec_010.py  test_spec_011.py  test_spec_012.py  test_spec_013.py  test_spec_014.py  test_spec_015.py  test_spec_016.py  test_spec_017.py  test_spec_019.py  test_spec_020.py  test_spec_021.py  test_validate_specs.py
tools/: acceptance-test.sh  perf_engine.py  pre-commit-check.sh  run-tests.sh  validate_specs.py
(+68 files in other folders)
