[tool.poetry]
name = "sask"
version = "0.1.0"
description = "sask — umbrella project for the Saskan calendar and related tools"
authors = ["David <david.stitt@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "sask", from = "src" }]

[tool.poetry.dependencies]
python    = "~3.12"
flask     = ">=3.0"
gunicorn  = ">=22.0"
markdown  = ">=3.6"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-benchmark = "^5.2.3"
pymarkdownlnt = "*"

[tool.poetry.group.acceptance.dependencies]
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths      = ["tests"]
pythonpath     = ["src", "tools/ops", "tools/dev"]
norecursedirs  = ["tests/perf", "tests/acceptance"]
